internal/internal-lb-alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-lb-alertmanager
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: internal
spec:
  type: LoadBalancer
  selector:
    app: alertmanager
  ports:
  - port: 80
    targetPort: 9093
    protocol: TCP
