internal/internal-lb-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-lb-grafana
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: internal
spec:
  type: LoadBalancer
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
