internal/internal-lb-prom.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-lb-prom
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: internal
spec:
  type: LoadBalancer
  selector:
    app: prometheus
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
